unnested some things to test plus fixed the hero section on mobile

--- a/style.css
+++ b/style.css
@@ -109,6 +109,10 @@ p, span {
     color: var(--textcolour);
 }
 
+/*
+--- NAV BURGER ---
+*/
+
 #nav_burger {
     width: 32px;
     height: 32px;
@@ -190,6 +194,10 @@ p, span {
     left: 0px;
 }
 
+/*
+--- NAV ---
+*/
+
 .nav_holder {
     width: 100%;
 }
@@ -220,22 +228,22 @@ nav {
     top: 0;
     z-index: 2;
 
-    > nav > nav_top > div > h1:nth-of-type(1)  {
-        color: #FFFFFF;
-    }
-    > nav > nav_btm > div > a {
-        color: #FFFFFF !important;
-    }
-    > nav > a {
-        background-color: #D8B796;
-        color: #000000;
-    }
-    > nav > a:hover {
-        background: var(--ssecondarycolourdark);
-    }
-
     animation: scroll-down 1s;
 }
+.nav_scroll_active > nav > nav_top > div > h1:nth-of-type(1)  {
+    color: #FFFFFF;
+}
+.nav_scroll_active > nav > nav_btm > div > a {
+    color: #FFFFFF !important;
+}
+.nav_scroll_active > nav > a {
+    background-color: #D8B796;
+    color: #000000;
+}
+.nav_scroll_active > nav > a:hover {
+    background: var(--ssecondarycolourdark);
+}
+
 
 nav_top {
     padding: 15px;
@@ -329,6 +337,10 @@ nav_top h1:nth-child(2) {
     margin: 0 -8px;
     z-index: 1;
 }
+
+/*
+--- END OF NAV ---
+*/
 
 .nav_btn {
     background-image: url(./images/Cross.svg);
@@ -450,10 +462,12 @@ nav_top h1:nth-child(2) {
 }
 
 hero {
-    display: block;
     width: 100%;
     margin-bottom: 120px;
     text-align: center;
+    display: flex;
+    justify-content: space-between;
+    height: calc(100vh - 80px);
 }
 
 hero > div:first-of-type {
@@ -478,6 +492,7 @@ hero > div:first-of-type > div {
     left: 50%;
     top: 50%;
     transform: translate(-50%,calc(-50% + 20px));
+    overflow-x: hidden;
 }
 
 .hero_images > div {
@@ -538,14 +553,13 @@ about {
 .about_text {
     max-width: 580px;
     margin: 40px auto 0 auto;
-
-    > h4 {
-        font-size: 20px;
-    }
-    > p {
-        font-size: 14px;
-        line-height: 21px;
-    }
+}
+.about_text > h4 {
+    font-size: 20px;
+}
+.about_text > p {
+    font-size: 14px;
+    line-height: 21px;
 }
 
 about .flexbox {
@@ -582,7 +596,6 @@ skills {
 .skills_cards_btm {
     display: flex;
     justify-content: center;
-
     margin-top: -34px;
 }
 
@@ -591,9 +604,9 @@ skills {
 }
 .skills_cards_btm>:nth-child(2) {
     transform: translateX(25px) translateY(40px);
-    > img {
-        max-width: 60px;
-    }
+}
+.skills_cards_btm>:nth-child(2) > img {
+    max-width: 60px;
 }
 
 .skills_card {
@@ -607,17 +620,16 @@ skills {
     overflow: hidden;
 
     margin: 0 -20px;
-
-    > div:first-of-type {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        > p {
-            color: #FFFFFF;
-        }
-    }
+}
+.skills_card > div:first-of-type {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.skills_card > div:first-of-type > p {
+    color: #FFFFFF;
 }
 
 .skills_card_small {
@@ -1217,11 +1229,6 @@ footer {
         display: flex;
         flex-direction: row;
         margin-top: 0;
-    }
-    hero {
-        display: flex;
-        justify-content: space-between;
-        height: calc(100vh - 80px);
     }
     .hero_text p {
         padding: 0 50px 10px;
